@@ -1,3 +1,7 @@
+2007-08-18  Badlop  <badlop@ono.com>
+
+	* src/mod_multicast.erl: Removed 'unrestricted' type of limits because it's unusued, as reported by Dialyzer.
+
 2007-08-12  Badlop  <badlop@ono.com>
 
 	* src/mod_multicast.erl: Local services are not inspected for ACL and Limits. Usage of stj() and jts() functions.
